k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-crawler-service
spec:
  selector:
    app: web-crawler
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
